# k7iasteria

./: .gitattributes  .gitignore  LICENSE  PROMPTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  provider.rs
src-tauri/src/commands/: ai.rs  error.rs  import.rs  memory.rs  mod.rs  search.rs  state.rs  stats.rs  timeline.rs
src-tauri/src/domain/: kind.rs  memory.rs  mod.rs
src-tauri/src/importers/: csv.rs  json.rs  mod.rs  sample.rs
src-tauri/src/services/: mod.rs  search.rs  stats.rs
src-tauri/src/storage/: mod.rs  repository.rs  schema.rs
src/desktop/: Desktop.tsx  DesktopIcon.tsx  MenuBar.tsx  SystemTray.tsx  WindowFrame.tsx
src/desktop/search/: SearchPalette.tsx
src/memory/: ipc.ts
src/stores/: memoryStore.ts  windowStore.ts
src/windows/: AiWindow.tsx  FolderWindow.tsx  ImportWindow.tsx  MemoryWindow.tsx  SettingsWindow.tsx  SystemInfoWindow.tsx  TimelineWindow.tsx
