[package]
name = "k7i-asteria"
version = "1.0.0"
description = "K7I Asteria - a personal operating system for memories"
authors = ["K7I"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "k7i_asteria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
once_cell = "1"
async-trait = "0.1"
parking_lot = "0.12"
rayon = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
